<resources>
    <string name="app_name">JalIhara</string>
    <string name="to_tickets">To Tickets</string>
    <string name="to_ticket_form">To Ticket Form</string>
    <string name="events">Events</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="date">date</string>
    <string name="order_now">Order Now</string>
    <string name="view_details">View Details</string>
    <string name="ticket_image">ticket_image</string>
    <string name="option_1">Early Bird</string>
    <string name="option_2">General</string>
    <string name="option_3">VIP</string>
    <string name="option_4">Family Pack</string>
    <string name="radio_description">Booth Type:</string>
    <string name="order">Order</string>
    <string name="detail_pemesanan">Detail Pemesanan</string>
    <string name="home">Home</string>
</resources>