<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TicketsView"
    android:orientation="vertical"
    android:includeFontPadding="false"
    android:lineSpacingExtra="0dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="25dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="25dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:contentDescription="@string/ticket_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingVertical="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
<!--                    <TextView-->
<!--                        android:id="@+id/text_view_idx"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:visibility="invisible"/>-->
                    <TextView
                        android:id="@+id/text_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/title"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:id="@+id/text_view_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/date"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="10sp"
                        tools:ignore="RtlHardcoded" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/text_view_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="10sp"
                    android:textColor="@color/khaki"
                    android:justificationMode="inter_word"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_view_price"
                        android:layout_width="0dp"
                        android:layout_weight=".70"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/price"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="12sp"
                        />

                    <Button
                        android:id="@+id/order_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:insetBottom="5dp"
                        app:backgroundTint = "@color/darkBrown"
                        android:text="@string/order_now"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="12sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>