<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBrown"
    tools:context=".TicketFormActivity">

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/back_btn"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:text="@string/detail_pemesanan"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticket_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_khaki"
        android:paddingHorizontal="25dp"
        android:paddingVertical="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/header_title">
        <TextView
            android:id="@+id/ticket_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ticket Name"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/darkBrown"/>

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_white"
            android:drawableStart="@drawable/user"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="Name"
            android:padding="10dp"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/qty_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_white"
            android:drawableStart="@drawable/ticket"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_regular"
            android:inputType="number"
            android:hint="000"
            android:padding="10dp"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_white"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/radio_description"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:minHeight="5dp"
                    android:text="@string/option_1"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />
                <RadioButton
                    android:id="@+id/radio_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_2"
                    android:textSize="15sp"
                    android:minHeight="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck"/>

                <RadioButton
                    android:id="@+id/radio_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:minHeight="5dp"
                    android:text="@string/option_3"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck"/>
                <RadioButton
                    android:id="@+id/radio_option_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_4"
                    android:textSize="15sp"
                    android:minHeight="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ticket_form"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/order"
        android:textColor="@color/darkBrown"
        android:textSize="15sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/alert_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brick"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:visibility="invisible"/>

</RelativeLayout>