<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:includeFontPadding="false"
    android:lineSpacingExtra="0dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="25dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="25dp"
        android:elevation="10dp"
        android:foreground="@drawable/rounded_border_image_recomended">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:contentDescription="@string/ticket_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:orientation="vertical"
                android:background="@android:color/transparent"
                android:paddingVertical="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/text_view_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/text_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/title"
                        android:fontFamily="@font/poppins_bold"
                        android:background="@android:color/transparent"
                        android:textSize="15sp"
                        />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center">
                    <Button
                        android:id="@+id/order_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:insetBottom="5dp"
                        app:backgroundTint = "@color/darkBrown"
                        android:text="@string/order_now"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="12sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>